<resources>
    <string name="app_name">ImplicitIntent</string>

    <string name="edittext_uri" >http://developer.android.com</string>
    <string name="button_uri">Open Website</string>

    <string name="edittext_loc" >Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share" >Stilthing nad billing love</string>
    <string name="button_share">Share this text</string>


</resources>
