<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edittext_uri"
            android:id="@+id/website_editText"/>
    <Button
            android:text="@string/button_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/open_website_button"
            android:layout_marginBottom="24dp"
            android:onClick="openWebsite"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edittext_loc"
            android:id="@+id/location_editText"/>
    <Button
            android:text="@string/button_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/open_location_button"
            android:layout_marginBottom="24dp"
            android:onClick="openLOcation"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edittext_share"
            android:id="@+id/share_editText"/>
    <Button
            android:text="@string/button_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/share_text_button"
            android:layout_marginBottom="24dp"
            android:onClick="shareText"/>
</LinearLayout>